--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <nav class="navigation">
             <ul>
                 <li class="navigation__item--hamburger">
-                    <a href="#" onclick="alert('There is no script atm')"><img src="./hamburger.png"></a>
+                    <a href="#" onclick="alert('There is no script atm')"><img src="./images/hamburger.png"></a>
                 </li>
                 <li class="navigation__item--name"><a href="#">Calendar</a></li>
                 <li class="navigation__item--today"><a href="#">Today</a></li>
                 <li class="navigation__item--arrow--left">
-                    <a href="#"><img src="./left.png"></a>
+                    <a href="#"><img src="./images/left.png"></a>
                 </li>
                 <li class="navigation__item--arrow--right">
-                    <a href="#"><img src="./right.png"></a>
+                    <a href="#"><img src="./images/right.png"></a>
                 </li>
                 <li class="navigation__item--month">July 2021</li>
                 <li class="navigation__item--layout">Week</li>
