--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </aside>
         <section class="grid">
             <header class="grid__header">
+                <h3 class="sidebar__gmt">GMT+03</h3>
                 <ul class="grid__header__weekdays">
                     <li>MON</li>
                     <li>TUE</li>
@@ -108,7 +109,7 @@
                     <li>SAT</li>
                     <li>SUN</li>
                 </ul>
-                <ul class="grid__header__days">
+                <ul class="grid__header__monthdays">
                     <li>24</li>
                     <li>25</li>
                     <li>26</li>
@@ -118,6 +119,37 @@
                     <li>30</li>
                 </ul>
             </header>
+            <div class="grid__events">
+                <aside class="grid__events__sidebar">
+                    <ul class="sidebar__time">
+                        <li>01:00</li>
+                        <li>02:00</li>
+                        <li>03:00</li>
+                        <li>04:00</li>
+                        <li>05:00</li>
+                        <li>06:00</li>
+                        <li>07:00</li>
+                        <li>08:00</li>
+                        <li>09:00</li>
+                        <li>10:00</li>
+                        <li>11:00</li>
+                        <li>12:00</li>
+                        <li>13:00</li>
+                        <li>14:00</li>
+                        <li>15:00</li>
+                        <li>16:00</li>
+                        <li>17:00</li>
+                        <li>18:00</li>
+                        <li>19:00</li>
+                        <li>20:00</li>
+                        <li>21:00</li>
+                        <li>22:00</li>
+                        <li>23:00</li>
+                    </ul>
+                </aside>
+                <section class="events__main">
+                </section>
+            </div>
         </section>
     </main>
 </body>
