HTML n CSS done

--- a/index.html
+++ b/index.html
@@ -148,6 +148,174 @@
                     </ul>
                 </aside>
                 <section class="events__main">
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
+                    <div class="events__item"></div>
                 </section>
             </div>
         </section>
