header week view js part done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Calendar</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -101,22 +100,10 @@
             <header class="grid__header">
                 <h3 class="sidebar__gmt">GMT+03</h3>
                 <ul class="grid__header__weekdays">
-                    <li>MON</li>
-                    <li>TUE</li>
-                    <li>WED</li>
-                    <li>THU</li>
-                    <li>FRI</li>
-                    <li>SAT</li>
-                    <li>SUN</li>
+                    <!-- GRID WEEK VIEW FUNCTION -->
                 </ul>
                 <ul class="grid__header__monthdays">
-                    <li>24</li>
-                    <li>25</li>
-                    <li>26</li>
-                    <li>27</li>
-                    <li>28</li>
-                    <li>29</li>
-                    <li>30</li>
+                    <!-- GRID WEEK VIEW FUNCTION -->
                 </ul>
             </header>
             <div class="grid__events">
@@ -320,6 +307,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
