Not nearly done

--- a/index.html
+++ b/index.html
@@ -122,8 +122,26 @@
             </section>
         </form>
         <footer class="event-creation-modal__footer">
-            <button class="event-creation-modal__footer--delete">Delete</button>
             <button class="event-creation-modal__footer--save">Save</button>
+        </footer>
+    </div>
+    <div class="event-modal-info">
+        <header class="event-creation-modal__header">
+            <a href="#"><img class="event-modal-info__header--exit" src="./images/exit.png"></a>
+        </header>
+        <section class="event-modal-info__main">
+            <h1 class="event-modal-info__title">
+
+            </h1>
+            <p class="event-modal-info__datetime">
+
+            </p>
+            <p class="event-modal-info__description">
+
+            </p>
+        </section>
+        <footer class="event-modal-info__footer">
+            <button class="event-creation-modal__footer--delete">Delete</button>
         </footer>
     </div>
     <script src="header__weekview.js"></script>
