inb4 weekview functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <ul class="navigation__item--left">
                 <li class="navigation__item--left--hamburger">
-                    <a href="#" onclick="alert('There is no script atm')"><img src="./images/hamburger.png"></a>
+                    <a href="#"><img src="./images/hamburger.png"></a>
                 </li>
                 <li class="navigation__item--left--name">
                     <a href="#">
@@ -24,7 +24,7 @@
             </ul>
             <ul class="navigation__item--center">
                 <li><button class="navigation__item--center--today">Today</button></li>
-                <li class="navigation__item--center--arrow--left">
+                <li class="navigation__item--arrow--left">
                     <a href="#"><img src="./images/left.png"></a>
                 </li>
                 <li class="navigation__item--arrow--right">
