additional features added

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     <script src="header__weekview.js"></script>
     <script src="sidebar__minicalendar.js"></script>
     <script src="events__main.js"></script>
+    <script src="header__navigation.js"></script>
 </body>
 
 </html>
