still having issues with the delete fnc

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="navigation__item--arrow--right">
                     <a href="#"><img src="./images/right.png"></a>
                 </li>
-                <li class="navigation__item--center--month">July 2021</li>
+                <li class="navigation__item--center--month"></li>
             </ul>
             <button class="navigation__item--right--layout">Week</button>
         </nav>
@@ -146,8 +146,8 @@
     </div>
     <script src="header__weekview.js"></script>
     <script src="sidebar__minicalendar.js"></script>
-    <script src="events__main.js"></script>
     <script src="header__navigation.js"></script>
+    <script src="events__main.js"></script>
 </body>
 
 </html>
