--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <nav class="navigation">
             <ul class="navigation__item--left">
                 <li class="navigation__item--left--hamburger">
-                    <a href="#"><img src="./images/hamburger.png"></a>
+                    <a href="#"><img src="../images/hamburger.png"></a>
                 </li>
                 <li class="navigation__item--left--name">
                     <a href="#">
@@ -25,10 +25,10 @@
             <ul class="navigation__item--center">
                 <li><button class="navigation__item--center--today">Today</button></li>
                 <li class="navigation__item--arrow--left">
-                    <a href="#"><img src="./images/left.png"></a>
+                    <a href="#"><img src="../images/left.png"></a>
                 </li>
                 <li class="navigation__item--arrow--right">
-                    <a href="#"><img src="./images/right.png"></a>
+                    <a href="#"><img src="../images/right.png"></a>
                 </li>
                 <li class="navigation__item--center--month"></li>
             </ul>
@@ -43,10 +43,10 @@
                     <nav class="calendar__navigation">
                         <ul class="calendar__arrows">
                             <li class="calendar__arrow--left">
-                                <a href="#"><img src="./images/left.png"></a>
+                                <a href="#"><img src="../images/left.png"></a>
                             </li>
                             <li class="calendar__arrow--right">
-                                <a href="#"><img src="./images/right.png"></a>
+                                <a href="#"><img src="../images/right.png"></a>
                             </li>
                         </ul>
                     </nav>
@@ -104,7 +104,7 @@
     </main>
     <div class="event-creation-modal">
         <header class="event-creation-modal__header">
-            <a href="#"><img class="event-creation-modal__header--exit" src="./images/exit.png"></a>
+            <a href="#"><img class="event-creation-modal__header--exit" src="../images/exit.png"></a>
         </header>
         <form class="event-creation-modal__form">
 
@@ -127,7 +127,7 @@
     </div>
     <div class="event-modal-info">
         <header class="event-creation-modal__header">
-            <a href="#"><img class="event-modal-info__header--exit" src="./images/exit.png"></a>
+            <a href="#"><img class="event-modal-info__header--exit" src="../images/exit.png"></a>
         </header>
         <section class="event-modal-info__main">
             <h1 class="event-modal-info__title">
@@ -148,6 +148,9 @@
     <script src="sidebar__minicalendar.js"></script>
     <script src="header__navigation.js"></script>
     <script src="events__main.js"></script>
+    <script src="event__manager.js"></script>
+    <script src="index.js"></script>
+
 </body>
 
 </html>
